Fixed color contrast  issue- CU-25bxvg

--- a/css/qsm-admin.css
+++ b/css/qsm-admin.css
@@ -859,7 +859,7 @@ Misc.
 }
 
 #mlw_qmn_theme_block_primary{
-    background-color: #3498db;
+    background-color: #005e8e;
     color: #fff;
 }
 
@@ -869,17 +869,17 @@ Misc.
 }
 
 #mlw_qmn_theme_block_emerald{
-    background-color: #2ecc71;
+    background-color: #006732;
     color: #fff;
 }
 
 #mlw_qmn_theme_block_turquoise{
-    background-color: #1abc9c;
+    background-color: #006552;
     color: #fff;
 }
 
 #mlw_qmn_theme_block_gray{
-    background-color: #ccc;
+    background-color: #595959;
     color: #fff;
 }
 
